--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -37,6 +37,9 @@ definitions:
     - &yarn_bootstrap_example
       name: Yarn bootstrap (bare RN example app)
       script: yarn bootstrap && cp example/private_config.example example/src/private_config.ts && cp example_expo/private_config.example example_expo/src/private_config.ts
+    - &yarn_bootstrap_example_expo
+      name: Yarn bootstrap (example expo app)
+      script: yarn bootstrap-expo
     - &setup_private_config
       name: Setup private config files
       script: cp example/private_config.example example/src/private_config.ts && cp example_expo/private_config.example example_expo/src/private_config.ts
@@ -131,6 +134,23 @@ definitions:
                 fi
             done
         done
+    - &prebuild_example_expo
+      name: Create ios/android native projects to test build
+      script: |
+        cd example_expo
+        jq '.expo.ios.bundleIdentifier = "network.rly.example.RlyNetworkMobileSdkExampleExpo"' app.json > tmp.json && mv tmp.json app.json
+        jq '.expo.android.package = "network.rly.ci.exampleexpo"' app.json > tmp.json && mv tmp.json app.json
+        npx expo prebuild
+    - &build_example_expo_ios
+      name: Build example expo iOS app
+      script: |
+        cd example_expo/ios
+        rm -r build
+        xcodebuild -workspace exampleexpo.xcworkspace -configuration Release \
+          -scheme exampleexpo -destination "generic/platform=iOS Simulator"
+        if [[ ! -d build/generated/ios ]]; then
+        exit 1
+        fi
 
 workflows:
   yarn-tests:
@@ -195,6 +215,7 @@ workflows:
   ios-build-previous-xcode:
     name: Previous XCode - Build iOS and check for artifact
     <<: *shared_ios_settings
+    # this can't be included in full-suite-and-mobile-tests (which uses xcode: latest) so trigger here too
     <<: *trigger_on_main_push
     environment:
       xcode: 13.4
@@ -231,6 +252,7 @@ workflows:
   example-app-ios-previous-xcode:
     name: Previous Xcode - Build example iOS app (bare RN)
     <<: *shared_ios_settings
+    # this can't be included in full-suite-and-mobile-tests (which uses xcode: latest) so trigger here too
     <<: *trigger_on_main_push
     environment:
       xcode: 13.4
@@ -252,6 +274,24 @@ workflows:
       - *yarn_install
       - *yarn_bootstrap_example
       - *build_example_android
+
+  # example expo apps
+  example-expo-app-ios-latest-xcode:
+    name: Latest Xcode - Build example expo iOS app
+    <<: *shared_ios_settings
+    environment:
+      xcode: latest
+      ios_signing:
+        distribution_type: development
+        bundle_identifier: network.rly.example.RlyNetworkMobileSdkExampleExpo
+      vars:
+        BUNDLE_ID: 'network.rly.example.RlyNetworkMobileSdkExampleExpo'
+    scripts:
+      - *yarn_install
+      - *yarn_bootstrap_example_expo
+      - *setup_ios_profiles
+      - *prebuild_example_expo
+      - *build_example_expo_ios
 
   # npm publish
   publish-npm:
