--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -37,6 +37,9 @@ definitions:
     - &yarn_bootstrap_example
       name: Yarn bootstrap (bare RN example app)
       script: yarn bootstrap && cp example/private_config.example example/src/private_config.ts && cp example_expo/private_config.example example_expo/src/private_config.ts
+    - &yarn_bootstrap_example_expo
+      name: Yarn bootstrap (example expo app)
+      script: yarn bootstrap-expo
     - &setup_private_config
       name: Setup private config files
       script: cp example/private_config.example example/src/private_config.ts && cp example_expo/private_config.example example_expo/src/private_config.ts
@@ -81,6 +84,37 @@ definitions:
     - &setup_ios_profiles
       name: Set up iOS provisioning profile
       script: xcode-project use-profiles
+
+    # uses .cur_android_build_dir tmp file as a way to abstract this into its own function (env vars get cleared
+    # between steps so cant use that)
+    - &build_android_in_env_dir
+      name: Build multiple gradle + SDK versions in .cur_android_build_dir
+      script: |
+        cd "$(cat .cur_android_build_dir)"
+        # setting gradle version fails sometimes if compileSdkVersion isnt set correctly so just put something temp here
+        sed -i '' -e "s/compileSdkVersion = .*$/compileSdkVersion = 33/g" build.gradle
+        for CURRENT_GRADLE_VERSION in 7.6.1 7.5.1 7.4.2 7.3.3; do
+          echo "#### Setting gradle to version $CURRENT_GRADLE_VERSION ####"
+          ./gradlew wrapper --gradle-version=$CURRENT_GRADLE_VERSION
+          if [[ ! `./gradlew --version | grep "Gradle $CURRENT_GRADLE_VERSION"` ]]; then
+            echo "#### Setting gradle version to $CURRENT_GRADLE_VERSION failed ####"
+            exit 1
+          fi
+          for CURRENT_SDK_VERSION in 33 32 31; do
+            rm -r app/build
+            echo "#### Setting SDK to version $CURRENT_SDK_VERSION ####"
+            sed -i '' -e "s/compileSdkVersion = .*$/compileSdkVersion = $CURRENT_SDK_VERSION/g" build.gradle
+            if [[ ! `cat build.gradle | grep "compileSdkVersion = $CURRENT_SDK_VERSION"` ]]; then
+              echo "#### Setting SDK version to $CURRENT_SDK_VERSION failed ####"
+              exit 1
+            fi
+            ./gradlew build
+            if [[ ! -d app/build/generated ]]; then
+              echo "#### Error building with gradle $CURRENT_GRADLE_VERSION and SDK version $CURRENT_SDK_VERSION ####"
+              exit 1
+            fi
+          done
+        done
     - &build_example_latest_ios
       # TODO: not sure why this only works for simulator and not real devices (i.e. generic/platform=iOS)
       # need to investigate more
@@ -105,32 +139,29 @@ definitions:
         if [[ ! -d build/generated/ios ]]; then
         exit 1
         fi
-    - &build_example_android
-      name: Build example android app (loops multiple gradle + SDK versions)
+    - &setup_build_example_android
+      name: Setup build example android app
+      script: echo "example/android" > .cur_android_build_dir
+    - &prebuild_example_expo
+      name: Create ios/android native projects to test build
       script: |
-        cd example/android
-        for CURRENT_GRADLE_VERSION in 7.6.1 7.5.1 7.4.2 7.3.3; do
-            echo "#### Setting gradle to version $CURRENT_GRADLE_VERSION ####"
-            ./gradlew wrapper --gradle-version=$CURRENT_GRADLE_VERSION
-            if [[ ! `./gradlew --version | grep "Gradle $CURRENT_GRADLE_VERSION"` ]]; then
-                echo "#### Setting gradle version to $CURRENT_GRADLE_VERSION failed ####"
-                exit 1
-            fi
-            for CURRENT_SDK_VERSION in 33 32 31; do
-                rm -r app/build
-                echo "#### Setting SDK to version $CURRENT_SDK_VERSION ####"
-                sed -i '' -e "s/compileSdkVersion = [0-9]*$/compileSdkVersion = $CURRENT_SDK_VERSION/g" build.gradle
-                if [[ ! `cat build.gradle | grep "compileSdkVersion = $CURRENT_SDK_VERSION"` ]]; then
-                    echo "#### Setting SDK version to $CURRENT_SDK_VERSION failed ####"
-                    exit 1
-                fi
-                ./gradlew build
-                if [[ ! -d app/build/generated ]]; then
-                    echo "#### Error building with gradle $CURRENT_GRADLE_VERSION and SDK version $CURRENT_SDK_VERSION ####"
-                    exit 1
-                fi
-            done
-        done
+        cd example_expo
+        jq '.expo.ios.bundleIdentifier = "network.rly.example.RlyNetworkMobileSdkExampleExpo"' app.json > tmp.json && mv tmp.json app.json
+        jq '.expo.android.package = "network.rly.example.exampleexpo"' app.json > tmp.json && mv tmp.json app.json
+        npx expo prebuild
+    - &build_example_expo_ios
+      name: Build example expo iOS app
+      script: |
+        cd example_expo/ios
+        rm -r build
+        xcodebuild -workspace exampleexpo.xcworkspace -configuration Release \
+          -scheme exampleexpo -destination "generic/platform=iOS Simulator"
+        if [[ ! -d build/generated/ios ]]; then
+        exit 1
+        fi
+    - &setup_build_example_expo_android
+      name: Setup build example expo android app
+      script: echo "example_expo/android" > .cur_android_build_dir
 
 workflows:
   yarn-tests:
@@ -151,7 +182,7 @@ workflows:
 
   full-suite-and-mobile-tests:
     name: Full test suite and mobile builds
-    max_build_duration: 60
+    max_build_duration: 120
     environment:
       <<: *default_environments
       xcode: latest
@@ -172,22 +203,33 @@ workflows:
       - *run_linter
       - *compile_typescript
       - *yarn_test_full_suite
-      # iOS latest xcode
+      # sdk: iOS latest xcode
       - *build_sdk_latest_ios
       - *build_sdk_previous_ios
-      # example app iOS latest xcode
+      # example app
       - *yarn_bootstrap_example
+      # example app: iOS latest xcode
       - *setup_ios_profiles
       - *build_example_latest_ios
       - *build_example_previous_ios
-      # example app android
-      - *build_example_android
+      # example app: android
+      - *setup_build_example_android
+      - *build_android_in_env_dir
+      # example expo app
+      - *yarn_bootstrap_example_expo
+      - *prebuild_example_expo
+      # example expo app: iOS latest xcode
+      - *build_example_expo_ios
+      # example expo app: android
+      - *setup_build_example_expo_android
+      - *build_android_in_env_dir
 
   # iOS/android libraries
   ios-build-latest-xcode:
     name: Latest Xcode - Build iOS and check for artifact
     <<: *shared_ios_settings
     environment:
+      <<: *default_environments
       xcode: latest
     scripts:
       - *build_sdk_latest_ios
@@ -195,8 +237,10 @@ workflows:
   ios-build-previous-xcode:
     name: Previous XCode - Build iOS and check for artifact
     <<: *shared_ios_settings
+    # this can't be included in full-suite-and-mobile-tests (which uses xcode: latest) so trigger here too
     <<: *trigger_on_main_push
     environment:
+      <<: *default_environments
       xcode: 13.4
     scripts:
       - *build_sdk_latest_ios
@@ -204,6 +248,8 @@ workflows:
   android-build:
     name: Build android and check for artifact
     <<: *shared_android_settings
+    environment:
+      <<: *default_environments
     scripts:
       - *yarn_install # probably need this? not sure
       - name: Set Android SDK location # probably need this too? not sure
@@ -216,6 +262,7 @@ workflows:
     name: Latest Xcode - Build example iOS app (bare RN)
     <<: *shared_ios_settings
     environment:
+      <<: *default_environments
       xcode: latest
       ios_signing:
         distribution_type: development
@@ -231,8 +278,10 @@ workflows:
   example-app-ios-previous-xcode:
     name: Previous Xcode - Build example iOS app (bare RN)
     <<: *shared_ios_settings
+    # this can't be included in full-suite-and-mobile-tests (which uses xcode: latest) so trigger here too
     <<: *trigger_on_main_push
     environment:
+      <<: *default_environments
       xcode: 13.4
       ios_signing:
         distribution_type: development
@@ -248,10 +297,62 @@ workflows:
   example-app-android:
     name: Build example android app
     <<: *shared_android_settings
+    environment:
+      <<: *default_environments
     scripts:
       - *yarn_install
       - *yarn_bootstrap_example
-      - *build_example_android
+      - *setup_build_example_android
+      - *build_android_in_env_dir
+
+  # example expo apps
+  example-expo-app-ios-latest-xcode:
+    name: Latest Xcode - Build example expo iOS app
+    <<: *shared_ios_settings
+    environment:
+      <<: *default_environments
+      xcode: latest
+      ios_signing:
+        distribution_type: development
+        bundle_identifier: network.rly.example.RlyNetworkMobileSdkExampleExpo
+      vars:
+        BUNDLE_ID: 'network.rly.example.RlyNetworkMobileSdkExampleExpo'
+    scripts:
+      - *yarn_install
+      - *yarn_bootstrap_example_expo
+      - *setup_ios_profiles
+      - *prebuild_example_expo
+      - *build_example_expo_ios
+  example-expo-app-ios-previous-xcode:
+    name: Previous Xcode - Build example expo iOS app
+    <<: *shared_ios_settings
+    # this can't be included in full-suite-and-mobile-tests (which uses xcode: latest) so trigger here too
+    <<: *trigger_on_main_push
+    environment:
+      <<: *default_environments
+      xcode: 13.4
+      ios_signing:
+        distribution_type: development
+        bundle_identifier: network.rly.example.RlyNetworkMobileSdkExampleExpo
+      vars:
+        BUNDLE_ID: 'network.rly.example.RlyNetworkMobileSdkExampleExpo'
+    scripts:
+      - *yarn_install
+      - *yarn_bootstrap_example_expo
+      - *setup_ios_profiles
+      - *prebuild_example_expo
+      - *build_example_expo_ios
+  example-expo-app-android:
+    name: Build example expo android app
+    <<: *shared_android_settings
+    environment:
+      <<: *default_environments
+    scripts:
+      - *yarn_install
+      - *yarn_bootstrap_example_expo
+      - *prebuild_example_expo
+      - *setup_build_example_expo_android
+      - *build_android_in_env_dir
 
   # npm publish
   publish-npm:
